# fastapi-notify

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py  main_rabbitmq.py  models.py
templates/: index.html
